--- a/contracts/oracle/Cargo.toml
+++ b/contracts/oracle/Cargo.toml
@@ -31,6 +31,11 @@ cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
 schemars = "0.8.8"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = "1.0.31"
+cw-storage-plus = "1.0.1"
+serde_json = "1.0.94"
+terra-cosmwasm = { path = "../../packages/terra-cosmwasm"}
+rhaki_cw_mock_http_querier = "0.1.0"
+cargo-tarpaulin = "0.25.2"
 
 [dev-dependencies]
 cosmwasm-schema = "1.0.0"
