--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ debug-assertions = false
 codegen-units = 1
 panic = 'abort'
 incremental = false
+
+[workspace.dependencies]
+rhaki-cw-plus = "0.6.4"
