--- a/contracts/oracle/Cargo.toml
+++ b/contracts/oracle/Cargo.toml
@@ -29,6 +29,7 @@ astroport = { path = "../../packages/astroport", default-features = false, versi
 cosmwasm-bignumber = { path = "../../packages/bignumber"}
 cosmwasm-std = "1.2.0"
 cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
+cosmwasm-schema = { version = "1.1.0" }
 schemars = "0.8.8"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = "1.0.31"
@@ -37,6 +38,8 @@ serde_json = "1.0.94"
 terra-cosmwasm = { path = "../../packages/terra-cosmwasm"}
 rhaki_cw_mock_http_querier = "0.1.0"
 cargo-tarpaulin = "0.25.2"
+rhaki-cw-plus = { workspace = true }
+
 
 [dev-dependencies]
 cosmwasm-schema = "1.0.0"
