--- a/contracts/oracle/Cargo.toml
+++ b/contracts/oracle/Cargo.toml
@@ -25,12 +25,18 @@ backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 moneymarket = { path = "../../packages/moneymarket", default-features = false, version = "0.3.1"}
+astroport = { path = "../../packages/astroport", default-features = false, version = "2.0.0"}
 cosmwasm-bignumber = { path = "../../packages/bignumber"}
 cosmwasm-std = "1.0.0"
 cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
+cosmwasm-schema = { version = "1.0.0" }
 schemars = "0.8.8"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = "1.0.31"
+cw-storage-plus = "1.0.1"
+serde_json = "1.0.94"
+terra-cosmwasm = { path = "../../packages/terra-cosmwasm"}
 
 [dev-dependencies]
 cosmwasm-schema = "1.0.0"
+rhaki_cw_mock_http_querier = "0.1.0"
