--- a/contracts/oracle/Cargo.toml
+++ b/contracts/oracle/Cargo.toml
@@ -27,9 +27,11 @@ backtraces = ["cosmwasm-std/backtraces"]
 moneymarket = { path = "../../packages/moneymarket", default-features = false, version = "0.3.1"}
 astroport = { path = "../../packages/astroport", default-features = false, version = "2.0.0"}
 cosmwasm-bignumber = { path = "../../packages/bignumber"}
-cosmwasm-std = "1.0.0"
-cosmwasm-storage = { version = "1.0.0", features = ["iterator"] }
-cosmwasm-schema = { version = "1.0.0" }
+
+cosmwasm-std = "=1.2.0"
+cosmwasm-storage = { version = "=1.0.0", features = ["iterator"] }
+cosmwasm-schema = { version = "=1.2.0" }
+
 schemars = "0.8.8"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = "1.0.31"
